--- a/doc/names.org
+++ b/doc/names.org
@@ -1,5 +1,5 @@
 * General names
 
-Wiek is the "Kingdom."
-Igoru is the hero.
-Irisi is the princess.
+ - Wiek :: is the "Kingdom".
+ - Igoru :: is the hero.
+ - Irisi :: is the princess.
